--- a/lib/yu/yu.css
+++ b/lib/yu/yu.css
@@ -1,25 +1,13 @@
-body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    width: 960px;
-    height: 500px;
-    position: relative;
+
+.arc text {
+    font: 20px sans-serif;
+    text-anchor: middle;
 }
 
-svg {
-    width: 100%;
-    height: 100%;
+.arc path {
+    stroke: #fff;
 }
 
-path.slice{
-    stroke-width:2px;
-}
-
-polyline{
-    opacity: .3;
-    stroke: black;
-    stroke-width: 2px;
-    fill: none;
-}
 .title {
     fill: teal;
     font-weight: bold;
