--- a/lib/yu/yu.css
+++ b/lib/yu/yu.css
@@ -12,3 +12,22 @@
     fill: teal;
     font-weight: bold;
 }
+
+.tooltip {
+    position: absolute;
+    text-align: center;
+    min-width: 20px;
+    max-height: 30px;
+    padding: 8px;
+    border: 2px solid #6F257F;
+    border-radius: 8px;
+    /*border-width: 10px;*/
+    margin-top: 30px;
+    font: 18px sans-serif bold;
+    background: none repeat scroll 0 0 #ffffff;
+    color: black;
+    pointer-events: none;
+}
+
+
+
