--- a/lib/yu/yu.css
+++ b/lib/yu/yu.css
@@ -15,10 +15,10 @@
 .tooltip {
     position: absolute;
     text-align: center;
-    max-width: 150px;
+    min-width: 40px;
     max-height: 40px;
     padding: 8px;
-    border: 2px solid #6F257F;
+    border: 2px solid #117f22;
     border-radius: 8px;
     margin-top: 30px;
     font: 20px bold;
