--- a/lib/yu/yu.css
+++ b/lib/yu/yu.css
@@ -31,4 +31,11 @@
     background-color: white;
 }
 
+#console-event{
+    font-size: 20px !important;
+    font-family:sans-serif !important;
+    font-weight: bold;
+    font-style: normal;
+
+}
 
