--- a/lib/yu/yu.css
+++ b/lib/yu/yu.css
@@ -19,20 +19,23 @@
     font-weight: bold;
 
 }
-#tab_title{
+
+#tab_title {
     text-align: center;
 }
-.toggle-handle{
+
+.toggle-handle {
     background-color: white;
 }
 
-#console-event{
+#console-event {
     font-size: 20px !important;
-    font-family:sans-serif !important;
+    font-family: sans-serif !important;
     font-weight: bold;
     font-style: normal;
 
 }
+
 /*#page-wrap {*/
 /*    margin: 50px;*/
 /*}*/
@@ -41,20 +44,39 @@
 Generic Styling, for Desktops/Laptops
 */
 table {
-    width: 100%;
+    width: 84%;
     border-collapse: collapse;
 }
+
 /* Zebra striping */
-tr:nth-of-type(odd) {
-    background: #eee;
+/*#bar_chart > table > tbody > tr:nth-of-type(odd) {*/
+/*    background: #feffdb;*/
+/*}*/
+#bar_chart > table > tbody > tr:last-child {
+    background: #feffdb;
+
 }
+
 th {
     background: #333;
     color: white;
     /*font-weight: bold;*/
 }
+
 td, th {
-    padding: 6px;
-    border: 1px solid #ccc;
+    padding: 4px;
+    border: 2px solid #ccc;
     text-align: left;
 }
+
+td[data-th] {
+    width: 80px;
+    /*font-size: 10px;*/
+}
+
+td[data-th="Team"] {
+    width: 20px !important;
+    font-size: 16px !important;
+    color: #ff134c;
+}
+
