--- a/lib/yu/yu.css
+++ b/lib/yu/yu.css
@@ -29,7 +29,7 @@
 }
 
 #console-event {
-    font-size: 20px !important;
+    font-size: 14px !important;
     font-family: sans-serif !important;
     font-weight: bold;
     font-style: normal;
@@ -53,14 +53,21 @@ table {
 
 }
 
+.w3-padding {
+    padding: 0px !important;
+}
+
 #bar_chart > table > thead > tr > th {
     background: #333;
     color: white;
     font-size: 8px;
     font-weight: normal;
+    padding: 4px;
+    border: 2px solid #ccc;
+    text-align: center;
 }
 
-#bar_chart > table > tbody > tr > td, th {
+#bar_chart > table > tbody > tr > td {
     padding: 4px;
     border: 2px solid #ccc;
     text-align: center;
@@ -78,3 +85,6 @@ td[data-th="Team"] {
     color: #ff134c;
 }
 
+#bar_chart{
+    height:80vh;
+}
